# shadowsocks-libuv

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README.md  encrypt.c  encrypt.h  local.c  server.c  server.h  utils.c
include/: shadow.h
src/: Makefile  client.c  crypt.c  handshack.c  remote.c  shadow.c
ss-local/: local.c
ss-local/include/: shadow.h
ss-local/src/: client.c  crypt.c  handshake.c  remote.c  shadow.c
